<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_full"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/ivQuizTechLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/quiz_tech_logo"
        android:src="@drawable/icon_home_logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivLoginImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/login_image"
            android:src="@drawable/img_login_center" />

        <TextView
            android:id="@+id/tvDailyQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ivLoginImage"
            android:layout_alignTop="@+id/ivLoginImage"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_rounded_white_bg"
            android:padding="8dp"
            android:text="@string/daily_quiz_time"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/text_color_unselect" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_alignEnd="@+id/ivLoginImage"
            android:paddingHorizontal="@dimen/_16sdp"
            android:background="@drawable/button_rounded_white_bg"
android:padding="@dimen/_8sdp"
            android:layout_alignBottom="@+id/ivLoginImage"
            >

            <ImageView
                android:id="@+id/img_winner_logo"
                android:layout_alignParentLeft="true"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/ic_1st"
                />
            <TextView
                android:id="@+id/tvTestKnowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_winner_logo"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/test_your_knowledge"
                android:textColor="@color/text_color_unselect"
                />
            <TextView
                android:id="@+id/tvWinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTestKnowledge"
                android:layout_toRightOf="@+id/img_winner_logo"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/test_your_knowledge_win"
                android:textColor="@color/login_winner"
                />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_32sdp"
        android:paddingEnd="@dimen/_32sdp">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/log_in_to_access_your_account"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text_color_unselect"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text_color_unselect"
            android:text="@string/email_id" />

        <EditText
            android:id="@+id/etLoginEmail"
            style="@style/loginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_rounded_bg_stroke"
            android:hint="@string/enter_email_id"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto"
            android:imeOptions="actionDone"
            android:textColorHint="#D9D9D9" />

        <Button
            android:id="@+id/btnLoginContinue"
            style="@style/loginBottonStyle"
            android:layout_width="match_parent"
            android:text="@string/continue_"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/_16sdp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            />

        <LinearLayout
            android:id="@+id/llRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:visibility="invisible"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account" />

            <TextView
                android:id="@+id/tvRegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="#FFA500"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>