<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_full"
    tools:context=".auth.AddProfile2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottomButtons"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="24dp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="24dp">

            <!-- Progress Bar (Placeholder - Can be made dynamic) -->
            <ProgressBar
                android:id="@+id/pbAddressProgress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:max="100"
                android:progress="75" 
                android:progressDrawable="@drawable/custom_progress_bar" />

            <TextView
                android:id="@+id/tvAddAddressTitle"
                style="@style/loginTextviewTextStyleHeader" 
                android:text="Add Your Address Details"
                android:layout_marginStart="0dp"/>

            <TextView
                android:id="@+id/tvAddAddressSubtitle"
                style="@style/loginTextviewInputText"
                android:text="Create an account to continue!"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="24dp"/>

            <TextView
                style="@style/loginTextviewInputTextNoMargin" 
                android:text="Save Default address as*"
                android:layout_marginBottom="8dp"
                
                />

            <RadioGroup
                android:id="@+id/radio_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radio_home"
                    android:layout_weight="1"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:background="@drawable/background_address_selector"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/ic_home"
                    android:button="@null"
                    android:textColor="@drawable/radio_color_selector"
                    android:checked="true"
                    android:drawableTint="@drawable/radio_color_selector"
                    android:text="@string/home"
                    android:fontFamily="@font/roboto"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_shop"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:textColor="@drawable/radio_color_selector"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:background="@drawable/background_address_selector"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/icon_shop"
                    android:button="@null"
                    android:drawableTint="@drawable/radio_color_selector"

                    android:text="@string/shop"
                    android:fontFamily="@font/roboto"
                    android:drawablePadding="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/radio_other"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:textColor="@drawable/radio_color_selector"

                    android:paddingHorizontal="@dimen/_5sdp"
                    android:background="@drawable/background_address_selector"
                    android:layout_width="match_parent"
                    android:drawableLeft="@drawable/icon_loc"
                    android:button="@null"
                    android:drawableTint="@drawable/radio_color_selector"

                    android:text="@string/other"
                    android:fontFamily="@font/roboto"
                    android:drawablePadding="@dimen/_8sdp"
                    android:layout_height="wrap_content"/>


            </RadioGroup>

            <TextView
                style="@style/loginTextviewInputTextNoMargin" 
                android:text="Flat / House no / Building name*"
                 />

            <EditText
                android:id="@+id/etFlatHouseNo"
                style="@style/loginEditTextStyle2"
                android:hint="9-1-34/30D, Sri sai nilayam"
                android:inputType="textPostalAddress" />

            <TextView
                style="@style/loginTextviewInputTextNoMargin"
                android:text="Floor ( Optional )" />

            <EditText
                android:id="@+id/etFloor"
                style="@style/loginEditTextStyle2"
                android:hint="Enter house number"
                android:inputType="text" />

            <TextView
                style="@style/loginTextviewInputTextNoMargin"
                android:text="Area / Sector / Locality*" />

            <EditText
                android:id="@+id/etAreaLocality"
                style="@style/loginEditTextStyle2"
                android:hint="Bapunagar, Langer house"
                android:inputType="textPostalAddress" />

            <TextView
                style="@style/loginTextviewInputTextNoMargin"
                android:text="Near by landmark ( Optional )" />

            <EditText
                android:id="@+id/etLandmark"
                style="@style/loginEditTextStyle2"
                android:hint="Saibaba temple"
                android:inputType="text" />

            <TextView
                style="@style/loginTextviewInputTextNoMargin"
                android:text="City" />

            <EditText
                android:id="@+id/etCity"
                style="@style/loginEditTextStyle2"
                android:hint="Hyderabad"
                android:inputType="text" />

            <TextView
                style="@style/loginTextviewInputTextNoMargin"
                android:text="Country" />

            <EditText
                android:id="@+id/etCountry"
                style="@style/loginEditTextStyle2"
                android:hint="India"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginEnd="8dp">

                    <TextView
                        style="@style/loginTextviewInputTextNoMargin"
                        android:text="State" />

                    <EditText
                        android:id="@+id/etState"
                        style="@style/loginEditTextStyle2"
                        android:hint="Telangana"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp">

                    <TextView
                        style="@style/loginTextviewInputTextNoMargin"
                        android:text="Zip code" />

                    <EditText
                        android:id="@+id/etZipCode"
                        style="@style/loginEditTextStyle2"
                        android:hint="500008"
                        android:inputType="number" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llBottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="Previous"
            android:gravity="center"
            android:textAllCaps="false"
            android:background="@drawable/button_rounded_white_bg"
            android:textColor="@color/quiztech_teal"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded_bg"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</RelativeLayout>